www file for images

--- a/inst/rmarkdown/templates/switch_xaringan/skeleton/libs/toggle.html
+++ b/inst/rmarkdown/templates/switch_xaringan/skeleton/libs/toggle.html
@@ -10,11 +10,11 @@
 }
 
 .topright {
-  background-image: url("skeleton_files/moon.svg");
+  background-image: url("www/moon.svg");
 }
 
 #mode_toggle.dark-mode {
-  background-image: url("skeleton_files/sun.svg")
+  background-image: url("www/sun.svg")
 }
 
 </style>
