--- a/inst/rmarkdown/templates/switch_xaringan/skeleton/libs/switch-themer.css
+++ b/inst/rmarkdown/templates/switch_xaringan/skeleton/libs/switch-themer.css
@@ -92,6 +92,10 @@
   --code-string-color: #EF798A;
 }
 
+.topright {
+  fill: var(--title-slide-text-color)
+}
+
 
 html {
   font-size: var(--base-font-size);
