--- a/inst/rmarkdown/templates/switch_xaringan/skeleton/libs/toggle.html
+++ b/inst/rmarkdown/templates/switch_xaringan/skeleton/libs/toggle.html
@@ -7,14 +7,7 @@
   right: 1em;
   height:30px;
   width:30px;
-}
-
-.topright {
-  background-image: url("www/moon.svg");
-}
-
-#mode_toggle.dark-mode {
-  background-image: url("www/sun.svg")
+  background-image: var(--background-image-url);
 }
 
 </style>
@@ -23,8 +16,8 @@
 function toggleTheme() {
   var element = document.body;
   element.classList.toggle("dark-mode");
-  document.getElementById("mode_toggle").classList.toggle("dark-mode");
 }
+
 
 
 document
